--- a/meal2.html
+++ b/meal2.html
@@ -20,6 +20,9 @@
             <button onclick="searchFood()" class="btn btn-outline-secondary" type="button"
                 id="button-search">SEARCH</button>
         </div>
+        <!--   <div>
+            <p id="error" class="text-danger">something went wrong please try again later.</p>
+        </div> -->
         <!-- single meal details -->
         <div id="meal-details" class=" w-50 mx-auto">
         </div>
